<resources>
    <string name="app_name">Connect</string>
    <string name="startup_text">Connect To Your \n Friends In A Unique \n Way</string>
    <string name="start_messaging">Start messaging</string>
    <!--    <string name="username">taylorswift.13</string>-->
    <string name="name">Taylor Swift   </string>
    <!--    <string name="email">taylor.swift.20cse@bmu.edu.in</string>-->
    <string name="profile">Profile</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Status">Status</string>
    <string name="contact_name">Camila Cabello</string>
    <string name="contact_username">\@ camila</string>
    <string name="addtofavourites">Add to Favourites</string>
    <string name="block">Block User</string>
    <string name="report">Report user</string>
    <string name="settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">User name</string>
    <string name="email">Email/Phone</string>
    <string name="password">Password</string>
    <string name="repassword">Re enter Password</string>
    <string name="alreadysignup">Already have an account?</string>
    <string name="loginlink">Login</string>
    <!--    login-->
    <string name="welcome">Welcome back!</string>
    <string name="weare_login">We’re so excited to see you again!!</string>
    <string name="account_info">Account information</string>
    <string name="forgotpass_login">Forgot Your Password?</string>
    <string name="login_login">Login</string>
    <string name="continue_login">Continue With Google?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Search blank fragment</string>
    <string name="noaccount">Dont Have Account? </string>
    <string name="register_login">Register</string>
    <string name="forgot">Forgot Password</string>
    <string name="emailforgot">Enter Your Email</string>
    <string name="forgot_text1">Thats okay it happens!</string>
    <string name="forgot_text2">Enter your email to reset your password</string>
    <string name="reset_forgot">Reset</string>
    <!--    settings-->
    <string name="location">Connaught place, Delhi</string>
    <string name="first_setting">Appearance</string>
    <string name="second_setting">chat theme</string>
    <string name="third_setting">Notifications</string>
    <string name="fourth_setting">Message,group,call tones</string>
    <string name="fifth_setting">Friends</string>
    <string name="sixth_setting">Requests, Friends list</string>
    <string name="seventh_setting">Help</string>
    <string name="eighth_setting">Help cenre, contact us, privacy policy</string>
    <string name="ninth_setting">Logout</string>
    <!-- search -->
    <string name="search1">Search User</string>

    <!-- Chatpage-->

    <string name="chatpage">Chats</string>
    <string name="enter_ur_message">Enter Your message</string>
    <string name="NameInChat">Camila Cabello</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>