<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment"
    android:background="@color/dark">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="155dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="22sp"
        />


        <androidx.cardview.widget.CardView
        android:id="@+id/profilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="70dp"
       >

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/img" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/cream"
            android:layout_marginStart="150dp"
            android:layout_marginTop="80dp"
            android:textSize="20sp"
            />
    <ImageView
        android:id="@+id/edit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_marginStart="270dp"
        android:layout_marginTop="80dp"
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/cream"
            android:layout_marginStart="150dp"
            android:layout_marginTop="115dp"/>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark"
    android:layout_marginTop="200dp"
    >
    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/ic_baseline_chat_24"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_setting"
        android:layout_marginStart="125dp"
        android:textColor="@color/cream"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_setting"
        android:textColor="@color/cream"
        android:layout_marginTop="30sp"
        android:layout_marginStart="125dp"
        />
</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark"
        android:layout_marginTop="270dp"
        >
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_baseline_notifications_24"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_setting"
            android:layout_marginStart="125dp"
            android:textColor="@color/cream"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_setting"
            android:textColor="@color/cream"
            android:layout_marginTop="30sp"
            android:layout_marginStart="125dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark"
        android:layout_marginTop="340dp"
        >
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_setting"
            android:layout_marginStart="125dp"
            android:textColor="@color/cream"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixth_setting"
            android:textColor="@color/cream"
            android:layout_marginTop="30sp"
            android:layout_marginStart="125dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark"
        android:layout_marginTop="410dp"
        >
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_baseline_headset_mic_24"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventh_setting"
            android:layout_marginStart="125dp"
            android:textColor="@color/cream"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighth_setting"
            android:textColor="@color/cream"
            android:layout_marginTop="30sp"
            android:layout_marginStart="125dp"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark"
        android:layout_marginTop="480dp"
        >
        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_baseline_login_24"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"


            />
        <TextView
            android:id="@+id/logoutbtn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninth_setting"
            android:layout_marginStart="125dp"
            android:textColor="@color/cream"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            />

    </androidx.cardview.widget.CardView>









</FrameLayout>